# attiny85_samples

./: .gitignore  CMakeLists.txt  README.md  toolchain-avr-gcc.make
design/: geiger.uxf  geiger.vrt  geiger_block.uxf
include/: config.h.in
src/: CMakeLists.txt  alarm.c  annoyatron.c  annoyatron.h  candle.c  charlie.c  ds3231_oled_clock.c  fix.h  geiger.c  i2c_master_usi.c  i2c_master_usi.h  i2clcd.c  i2clcd.h  i2cmaster.S  ir_temp.c  irlamp.c  lp_blink.c  lpc_data.h  main.c  mq_6.c  nano_ammeter.c  proximity.c  speech.c  speech_data.h  speech_synth.c  speech_synth.h  u8g2_i2c_test.c  u8x8_avr.c  u8x8_avr.h  ws2812.c  ws2812_config.h
src/snd/: snd.h  snd_cricket.c  snd_critters.c  snd_droplet.c  snd_insect.c  snd_scifi.c  snd_water.c  snd_whisper.c
